# ai-interview-coach

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  ci.yml  frontend.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_core_tables.py  0002_add_levels_and_code_flags.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: evaluate.py  history.py  questions.py  roles.py  sessions.py
backend/app/core/: config.py
backend/app/db/: base.py  dependencies.py  init_db.py  session.py
backend/app/models/: enums.py  tables.py
backend/app/schemas/: common.py  question.py  role.py  session.py
backend/app/seeds/: seed_roles_and_questions.json
backend/app/services/: evaluation.py  llm.py
backend/app/utils/: logging.py
backend/tests/: __init__.py  conftest.py  test_llm_stub.py  test_questions.py  test_roles.py  test_sessions.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  prettier.config.cjs  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  interview.ts  types.ts
frontend/src/components/: RoleCard.tsx
frontend/src/context/: InterviewSessionContext.tsx
frontend/src/hooks/: useConsent.ts  useInterviewSession.ts  useTheme.ts
frontend/src/pages/: HistoryPage.tsx  InterviewPage.tsx  LandingPage.tsx  SessionDetailPage.tsx
frontend/src/providers/: AppProviders.tsx  ThemeProvider.tsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/utils/: formatters.ts  levels.ts  questionTargets.ts
(+14 files in other folders)
