[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-interview-coach-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Interview Coach application."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Interview Coach Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.7",
    "httpx>=0.27.0",
    "openai>=1.51.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "psycopg[binary,pool]>=3.2.3",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
    "factory-boy>=3.3.0",
    "Faker>=27.0.0",
    "httpx>=0.27.0",
    "black>=24.8.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240907",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_configs = true
namespace_packages = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
